<resources>
    <string name="app_name">Mantu Yadav JMM</string>
    <string name="hindi_app_name">मंटू यादव जेएमएम</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="wait">Please Wait...</string>
    <string name="hindi_wait">कृपया प्रतीक्षा करें...</string>

    <string name="load">Load more</string>
    <string name="hindi_load">और लोड करें</string>

    <string name="empty">Nothing to show...</string>
    <string name="hindi_empty">दिखाने के लिए कुछ भी नहीं...</string>

    <string name="youtube">YouTube</string>
    <string name="hindi_youtube">यूट्यूब</string>

    <string name="facebook">Facebook</string>
    <string name="hindi_facebook">फेसबुक</string>

    <string name="intro">Introduction</string>
    <string name="manifesto">Manifesto</string>
    <string name="achievements">Achievements</string>
    <string name="news">News &amp; Events</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="members">Members</string>
    <string name="results">Results</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="contact">Contact</string>

    <string name="hindi_intro">परिचय</string>
    <string name="hindi_manifesto">घोषणापत्र</string>
    <string name="hindi_achievements">प्राप्ति</string>
    <string name="hindi_news">खबर और घटनाएँ</string>
    <string name="hindi_upcoming">आने वाले कार्यक्रम</string>
    <string name="hindi_members">सदस्य</string>
    <string name="hindi_results">परिणाम</string>
    <string name="hindi_videos">वीडियो</string>
    <string name="hindi_photos">तस्वीरें</string>
    <string name="hindi_contact">संपर्क करें</string>

    <string name="send">Share via:</string>
    <string name="hindi_send">भेजें द्वारा:</string>


</resources>
